2002-02-19  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (random_01): Use /dev/urandom when available.

	* src/sheet-autofill.c (autofill_cell): Use gnum_float instead of
	double.
	* src/expr.c (expr_eval_real): Ditto.
	* src/datetime.c (datetime_timet_to_serial_raw): Ditto.

	* src/format.c (format_compile): Fix isdigit usage.

	* src/value.c (value_diff): Return a gnum_float, not a double.

2002-02-19  Jody Goldberg <jody@gnome.org>

	* src/global-gnome-font.c (global_gnome_font_init) : get font list
	  from pango.
	(global_gnome_font_shutdown) : and free it here.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* configure.in  : post release bump.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-02-18  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_scroll_wheel_support) : fix
	  scrollwheel support.
	(workbook_control_gui_init) : use the new 'scroll-event' handler.

2002-02-17  Jody Goldberg <jody@gnome.org>

	* plugins/excel/ms-escher.c (ms_escher_read_OPT) : add support for
	  blip cropping.

2002-02-16  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-image.c (soi_get_pixbuf) : move things here.
	(sheet_object_image_new_view) : and use it here.
	(sheet_object_image_print) : and here.

2002-02-15  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-image.{ch} : new.

	* src/sheet-object.c (sheet_object_new_view) : use a weak_ref.

	* src/sheet-control-gui.c (scg_object_register) : more safety
	  and use a weak_ref.

	* src/sheet-object-graphic.c : More GObject-ification.

2002-02-15  Morten Welinder  <terra@diku.dk>

	* src/regression.c (LUPDecomp): Use fabs, not abs.
	* src/validation.c (validation_eval): Ditto.

2002-02-15  Morten Welinder  <terra@diku.dk>

	* src/regression.c (general_linear_regression): Cleanup using
	range functions.

2002-02-15  Jody Goldberg <jody@gnome.org>

	* src/widgets/gnumeric-combo-text.c (gnm_combo_text_destroy) : more