@@ -2,6 +2,7 @@
 #define GNUMERIC_FORMAT_H
 
 #include "gnumeric.h"
+#include "numbers.h"
 #include <sys/types.h>
 #include <regex.h>
 
@@ -53,7 +54,7 @@ typedef struct {
 	gboolean group_thousands;
 	gboolean has_fraction;
 } format_info_t;
-void render_number (GString *result, gdouble number, format_info_t const *info);
+void render_number (GString *result, gnum_float number, format_info_t const *info);
 
 /* Locale support routines */
 char const *gnumeric_setlocale      (int category, char const *val);
